# Projektkurs-Mono

./: .gitignore  .gitmodules  .gitpod.dockerfile  .gitpod.yml  .stignore  README.md  dependencies.sh  ingress.yml  kube-prometheus-stack.yaml  observability.sh  okteto-install.sh  okteto-pipeline.yml  okteto.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci-api-video.yml  ci-auth.yml  ci-backend.yml  ci-frontend.yml  ci-stream.yml  docker-image.yml  preview-closed.yml  preview.yml
backend/: .dockerignore  .env  .env.docker  .env.gitpod  Cargo.toml  Dockerfile  Rocket.toml  Rocket.toml.gitpod
backend/api-video/: Cargo.toml  Dockerfile  buf.gen.yaml  build.rs
backend/api-video/migrations/2022-05-08-132849_create_videos/: up.sql
backend/api-video/src/: kafka.rs  scylla.rs  service.rs  storage.rs  video.rs
backend/api-video/src/endpoints/: create.rs  update.rs
backend/api-video/src/kafka/: events.rs  handler.rs  mod.rs
backend/api-video/src/storage/: mod.rs  models.rs  schema.rs
backend/auth/: .dockerignore  Cargo.toml  Dockerfile  buf.gen.yaml  build.rs
backend/auth/migrations/2022-03-18-141752_create_users/: up.sql
backend/auth/migrations/2022-05-25-152749_create-users/: up.sql
backend/auth/migrations/2022-05-26-165802_id-string-to-uuid/: down.sql  up.sql
backend/auth/proto/: auth.proto
backend/auth/src/: kafka.rs  lib.rs  service.rs  storage.rs  user.rs
backend/auth/src/db/: mod.rs  models.rs  schema.rs
backend/auth/src/routes/: login.rs  register.rs
backend/auth/src/storage/: mod.rs  models.rs  schema.rs
backend/gate/: Dockerfile  buf.gen.yaml  go.mod  go.sum  main.go
backend/gateway/: Cargo.toml  build.rs
backend/gateway/src/: main.rs
backend/lib/: Cargo.toml
backend/lib/migrations/2021-12-31-163938_create_likes/: up.sql
backend/lib/migrations/2022-02-15-144005_create_playlists/: up.sql
backend/lib/src/: lib.rs  schema.rs  user.rs
backend/monolith/: .dockerignore  .env  .env.docker  Cargo.toml  Dockerfile  Rocket.toml  Rocket.toml.docker
backend/monolith/postgres/: Cargo.toml
backend/monolith/postgres/migrations/2021-12-28-160611_redo_videos/: up.sql
backend/monolith/postgres/migrations/2022-01-04-184645_create_tags/: up.sql
backend/monolith/postgres/migrations/2022-02-24-115438_create_subscriptions/: down.sql
backend/monolith/postgres/src/: tag.rs  video.rs
backend/monolith/src/: comment.rs  like.rs  main.rs  playlist.rs  subscription.rs  tag.rs  upload.rs  user.rs  video.rs
backend/packager/: Dockerfile  buf.gen.yaml  go.mod  go.sum  main.go
backend/packager/conf/: boto.cfg  input.yaml  pipeline.yaml
backend/packager/kafka/: kafka.go
backend/packager/minio/: minio.go
backend/packager/server/: main.go
backend/packager/tasks/: transcode.go
backend/packager/transcode/: transcode.go
backend/postgres/: .env  Cargo.toml
backend/postgres/migrations/2021-12-18-150400_create_users/: up.sql
backend/postgres/migrations/2021-12-19-132824_create_videos/: up.sql
backend/postgres/migrations/2021-12-25-153552_user_uuid/: down.sql  up.sql
backend/postgres/migrations/2021-12-30-181111_create_comments/: up.sql
backend/postgres/migrations/2022-01-04-184645_create_tags/: down.sql
backend/postgres/migrations/2022-02-15-144005_create_playlists/: down.sql
backend/postgres/migrations/2022-02-24-115438_create_subscriptions/: up.sql
backend/postgres/src/: comment.rs  create_user.rs  create_video.rs  lib.rs  like.rs  models.rs  playlist.rs  schema.rs  subscription.rs  tag.rs  user.rs  video.rs
backend/search/: Dockerfile  buf.gen.yaml  go.mod  go.sum  grpc.go  kafka.go  main.go  meilisearch.go
backend/search/collectors/: main.go  users.go  utils.go  videos.go
backend/src/: comment.rs  like.rs  main.rs  playlist.rs  redis.rs  subscription.rs  tag.rs  upload.rs  user.rs  video.rs
backend/stream/: Cargo.toml  Dockerfile
backend/stream/src/: main.rs
backend/upload/: Cargo.toml  Dockerfile  go.mod  go.sum  kafka.go  main.go  minio.go
backend/upload/server/: main.go  minio.go
backend/upload/src/: lib.rs  service.rs
conf/: Dockerfile  envoy.yaml  kube-prometheus-stack.yaml  mimir-distributed.yaml  minio.yaml  postgres.yaml
frontend/: Dockerfile  package-lock.json  package.json  webpack.config.js
frontend/nginx/: nginx.conf
frontend/public/: index.html
frontend/src/: App.js  Layout.js  index.js
frontend/src/components/comment/: Comment.js  CreateComment.js
frontend/src/components/list/: PlaylistLink.js  VideoEntry.js  VideoLink.js
frontend/src/components/notifications/: Notification.js
frontend/src/components/player/: CommentView.js  ExtendedView.js  ExtendedViewPanel.js  Player.js  Rating.js  StaticPlayer.js  TagView.js
frontend/src/components/shared/: FormInputField.js  FormSubmitButton.js  Header.js  HeaderDropdown.js  HeaderLink.js  HeaderLinks.js  InputFormField.js  SubscriptionLink.js  Trash.js
frontend/src/components/tag/: Tag.js  TagLink.js
frontend/src/components/upload/: FileUpload.js  Upload.js
frontend/src/global/: client.js
frontend/src/pages/: EditTag.js  EditVideo.js  Id.js  Login.js  NotificationPage.js  PlayerPage.js  Playlist.js  PlaylistList.js  PlaylistPage.js  Register.js  TagPage.js  Upload.js  VideoList.js
frontend/src/pages/tag/: TagList.js
frontendv2/: .eslintrc.js  Dockerfile  buf.gen.yaml  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
frontendv2/nginx/: nginx.conf
frontendv2/src/: App.tsx  Context.tsx  WrappedContext.tsx  client.tsx  main.tsx
frontendv2/src/components/Create/: Dropzone.tsx
frontendv2/src/components/Login/: LoginForm.tsx  PasswordStrength.tsx  (+1 more)
frontendv2/src/context/: userContext.tsx
frontendv2/src/routes/: Create.tsx  Login.tsx  Player.tsx  Videos.tsx
manifests/: api-video.yml  auth.yml  backend-service.yml  backend.yml  frontend-service.yml  frontend.yml  gate.yml  ingress.yml  meilisearch.yml  packager.yml  proxy.yml  search.yml  stream-service.yml  stream.yml  upload.yml
microservices/stream/: .env  Cargo.toml  Dockerfile
microservices/stream/src/: main.rs
(+2 files in other folders)
