[package]
name = "backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.4"
rust-s3 = "0.28.0"
rocket = { version = "0.5.0-rc.1", features = ["json", "secrets"] }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
tokio = "1.14.0"
uuid = { version = "1.0.0-alpha.1", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
postgres = { path = "./postgres/" }
bcrypt = "0.10"
dotenv = "0.15.0"
