[package]
name = "api-video"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "video_api"
path = "src/service.rs"

[dependencies]
log = "0.4.16"
rdkafka = { git = "https://github.com/fede1024/rust-rdkafka.git", features = ["cmake-build"] }
tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros"] }
prost = "0.10"
tonic = { version = "0.7", features = ["compression"] }
pbjson = "0.3"
pbjson-types = "0.3"
serde = "1.0"
lazy_static = "1.4.0"
redis = { version = "0.21.5", features = ["r2d2"] }
r2d2 = "0.8.9"
serde_json = "1.0.79"
jsonwebtoken = "8.1.0"
rs-auth = { git = "https://github.com/MSOStream/rs-auth"}
uuid = { version = "0.8.2", features= ["v4"] }
chrono = "0.4.19"
strum = { version = "0.24", features = ["derive"] }
pretty_env_logger = "0.4.0"
strum_macros = "0.24"
scylla = "0.4.4"
once_cell = "1.10.0"

[build-dependencies]
tonic-build = "0.7"

