[package]
name = "api-video"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "video_api"
path = "src/service.rs"

[dependencies]
log = "0.4.17"
rdkafka = { git = "https://github.com/fede1024/rust-rdkafka.git", features = ["cmake-build"] }
tokio = { version = "1.18.2", features = ["rt-multi-thread", "macros"] }
prost = "0.10.3"
tonic = { version = "0.7.2", features = ["compression"] }
pbjson = "0.3.1"
pbjson-types = "0.3.1"
serde = "1.0.137"
lazy_static = "1.4.0"
redis = { version = "0.21.5", features = ["r2d2"] }
r2d2 = "0.8.9"
serde_json = "1.0.81"
jsonwebtoken = "8.1.0"
rs-auth = { git = "https://github.com/MSOStream/rs-auth"}
uuid = { version = "1.0.0", features= ["v4"] }
chrono = "0.4.19"
strum = { version = "0.24", features = ["derive"] }
pretty_env_logger = "0.4.0"
strum_macros = "0.24"
diesel = { version = "1.4.4", features = ["postgres"] }
diesel_migrations = "1.4.0"
opentelemetry = { version = "0.17", features = ["rt-tokio"] }
opentelemetry-jaeger = "0.16"
tracing = "0.1"
tracing-subscriber = "0.3.11"
tracing-opentelemetry = "0.17.2"
tracing-futures = "0.2"

[build-dependencies]
tonic-build = "0.7.2"

