[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "auth_service"
path = "src/service.rs"

[dependencies]
log = "0.4.16"
chrono = { version = "0.4.19", default-features = false, features = [ "clock", "std" ] }
rdkafka = { git = "https://github.com/fede1024/rust-rdkafka.git", features = ["cmake-build"] }
jsonwebtoken = "8.0.1"
lazy_static = "1.4.0"
serde = "1.0.136"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "0.8.2", features = ["v4"] }
rs-auth = { git = "https://github.com/MSOStream/rs-auth" }
prost = "0.10"
tonic = { version = "0.7", features = ["compression"] }
redis = { version = "0.21.5", features = ["r2d2"] }
r2d2 = "0.8.9"
serde_json = "1.0.79"
openssl = "0.10.38"
rust-argon2 = "1.0.0"
strum = { version = "0.24", features = ["derive"] }
pretty_env_logger = "0.4.0"
strum_macros = "0.24"
futures-util = "0.3.21"