[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "auth_service"
path = "src/service.rs"

[dependencies]
log = "0.4.17"
chrono = { version = "0.4.19", default-features = false, features = [ "clock", "std" ] }
rdkafka = { git = "https://github.com/fede1024/rust-rdkafka.git", features = ["cmake-build", "tracing"] }
jsonwebtoken = "8.1.0"
lazy_static = "1.4.0"
serde = "1.0.137"
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.0.0", features = ["v4"] }
rs-auth = { git = "https://github.com/MSOStream/rs-auth" }
prost = "0.10.3"
tonic = { version = "0.7.2", features = ["compression"] }
redis = { version = "0.21.5", features = ["r2d2"] }
r2d2 = "0.8.9"
serde_json = "1.0.81"
openssl = "0.10.40"
rust-argon2 = "1.0.0"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
futures-util = "0.3.21"
pbjson = "0.3.1"
pbjson-types = "0.3.1"
opentelemetry = { version = "0.17", features = ["rt-tokio", "trace"] }
opentelemetry-jaeger = { version= "0.16", features = ["reqwest_collector_client", "collector_client", "rt-tokio"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = [ "json" ]  }
tracing-opentelemetry = "0.17.2"
tracing-futures = "0.2.5"
diesel = { version = "1.4.8", features = ["postgres"] }
diesel_migrations = { version = "1.4.0", features = ["postgres"] }

