[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-cors = "0.6.1"
actix-web = "4"
actix-web-httpauth = "0.6.0"
prost = "0.9.0"
tonic = "0.6.2"
pretty_env_logger = "0.4.0"

[build-dependencies]
tonic-build = "0.6.2"