[package]
name = "backend"
version = "0.1.0"
edition = "2018"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_postgres_pool"]

[dependencies]
regex = "1.5.5"
rust-s3 = "0.28.1"
rocket = { version = "0.5.0-rc.1", features = ["json", "secrets"] }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
tokio = { version = "1.14.0", features = ["time"] }
uuid = { version = "1.0.0-alpha.1", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
msostream = { path = "../lib/" }
dotenv = "0.15.0"
redis = { version = "0.21.5" }
serde_json = "1.0"
