[package]
name = "upload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "upload_service"
path = "src/service.rs"

[dependencies]
actix = "0.13.0"
actix-cors = "0.6.1"
actix-web = "4"
rust-s3 = "0.30"
actix-web-httpauth = "0.6.0"
auth_lib = { path = "../auth/" }