[package]
name = "stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-cors = "0.6.1"
actix-web = "4"
awc = "3.0.0"
dotenv = "0.15.0"
futures = "0.3.21"
log = "0.4.14"
pretty_env_logger = "0.4.0"
regex = "1.5.5"
rust-s3 = "0.30.0"
serde = "1.0.136"
